nginx/nginx-bdlocal.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bdlocal
  annotations:
    # 注意：这里要设置为您前面配置的`controller.ingressClass`唯一标识
    kubernetes.io/ingress.class: crf
spec:
  rules:
  - host: bdlocal.crfchina.com
    http:
      paths:
      - path: /
        backend:
          serviceName: crfcredit-svc
          servicePort: 8080
