nginx/nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # 注意：这里要设置为您前面配置的`controller.ingressClass`唯一标识
    kubernetes.io/ingress.class: crf
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
